--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "spark-theory-next",
+  "name": "spark-theory-tailwind",
   "version": "1.0.0",
   "private": true,
   "scripts": {
@@ -8,8 +8,11 @@
     "start": "next start"
   },
   "dependencies": {
-    "next": "latest",
+    "autoprefixer": "^10.4.0",
+    "next": "13.4.12",
+    "postcss": "^8.4.6",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "tailwindcss": "^3.3.0"
   }
 }
